[package]
name = "terra"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast TUI Markdown editor with live preview"

[lib]
name = "terra"
path = "src/lib.rs"

[[bin]]
name = "terra"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
